NodeBST --> BinarySearchNode extends BinaryNode. Encapsulation updates regarding BinaryNode vs BinarySearchNode. Initialization updates to Node and subclasses. BinarySearchTree class added. Still to come:     BinarySearchTree testing     Example to include BinarySearchTree

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 # Short term
-DataStructures/NodeBST.py
 DataStructures/BinarySearchTree.py
+    Testing & verification
+Example
+    Update structure to easily scale
+    Add BinarySearchTree options
 DataStructures/LinkedList.py
 
 # Long term
