--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 # Short term
 DataStructures/BinarySearchTree.py
-    show method
-    show method incorporates verbose
-    show method incorporates highlight
     Testing & verification
+        Delete is not up to snuff yet, see ex at end
+    Add rotations into menu
+    Add highlights into rotations
 DataStructures/LinkedList.py
 
 # Long term
@@ -25,3 +25,20 @@ Algorithms?
 		MSTs
 			Kruskal
 			Prim
+
+
+
+ex: Broken delete. Delete head.
+********************************************************************************************************************************
+                                                               4
+                                                                                               6
+                                                                               5                               9
+                                                                                       5
+                                                                                           5
+                                                                                             5
+********************************************************************************************************************************
+****************
+       5
+           6
+         5   9
+****************
